--- a/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.ModuleName/Views/ViewA.xaml
+++ b/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.ModuleName/Views/ViewA.xaml
@@ -1,13 +1,16 @@
-﻿<UserControl x:Class="CsvViewer.Modules.ModuleName.Views.ViewA"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CsvViewer.Modules.ModuleName.Views"
-             xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True" >
+﻿<UserControl
+    x:Class="CsvViewer.Modules.ModuleName.Views.ViewA"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:CsvViewer.Modules.ModuleName.Views"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-        <TextBlock Text="{Binding Message}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontSize="24"/>
+        <TextBlock
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="24"
+            Text="{Binding Message}" />
     </Grid>
 </UserControl>
