--- a/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.CsvOpener/Views/ViewA.xaml
+++ b/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.CsvOpener/Views/ViewA.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="CsvViewer.Modules.ModuleName.Views.ViewA"
+    x:Class="CsvViewer.Modules.CsvOpener.Views.ViewA"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:CsvViewer.Modules.ModuleName.Views"
+    xmlns:local="clr-namespace:CsvViewer.Modules.CsvOpener.Views"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     prism:ViewModelLocator.AutoWireViewModel="True">
